# Grapher2D

./: .gitignore  .gitmodules  CMakeLists.txt  Grapher2D.sln  README.md
Debug/: Grapher2D.ilk
GLUI/: .travis.yml  CMakeLists.txt  README.md
GLUI/include/GLUI/: GLPanel.h  GLUIObject.h  TextBox.h  Window.h
GLUI/src/GLUI/: GLPanel.cpp  Input.cpp  TextBox.cpp  Window.cpp
Grapher2D/: CMakeLists.txt  Grapher2D.vcxproj  Grapher2D.vcxproj.filters  Input.cpp  Input.h  UI.cpp  UI.h  Window.cpp  Window.h  main.cpp
Grapher2D/Debug/: vc140.idb
Grapher2D/Debug/Grapher2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Grapher2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Grapher2D/Release/Grapher2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Grapher2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Grapher2D/gui/: GUI.cpp  GUI.h
Grapher2D/math/: Equation.cpp  Equation.h
Grapher2D/utils/: String.h
Grapher2D/x64/Debug/: vc140.idb
Grapher2D/x64/Debug/Grapher2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Grapher2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Grapher2D/x64/Release/Grapher2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Grapher2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NonWindows Build Files/: MacBuild.sh
glewCMake/: CMakeLists.txt
glsl/: input.txt  output.txt  run.py
src/: CMakeLists.txt  GLGraph.cpp  GLGraph.h  GraphQuad.cpp  GraphQuad.h  GraphShader.cpp  GraphShader.h  Input.cpp  Input.h  UI.cpp  UI.h  Window.cpp  equation.c  equation.h  glUtils.c  glUtils.h  glad.c  main.c  main.cpp  stdhdr.h  utils.c  utils.h
src/Grapher2D/: CMakeLists.txt  Window.h  main.cpp
src/Grapher2D/math/: Equation.h
src/Grapher2D/utils/: String.h
src/gl/: GLGraph.cpp  GLGraph.h  GraphQuad.h  GraphShader.cpp  GraphShader.h
src/glad/: glad.cpp  glad.h  glad.hpp
src/math/: Equation.cpp  Equation.h
src/utils/: Equation.cpp  Equation.h  String.h
x64/Debug/: Grapher2D.ilk
